# LLM_RAG_project

./: .gitignore  Dockerfile  LICENSE  README.MD  app.py  convert_pdf2txt.ipynb  convert_pdf2txt_example.ipynb  docker-compose.yml  fill_db.py  pyproject.toml  setup.cfg  utils.py
db/: index_mapping.py  run_db.py
hf-deploy/: README.md  app.py  requirements.txt
inference/: encoder.py  model.py
notebooks/: convert_text2embed.ipynb  influence_context_on_model.ipynb  utils.py
